--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-heroku==0.3.1
 django-registration==3.2
 gunicorn==20.1.0
 psycopg2==2.9.3
+python-decouple==3.6
 six==1.16.0
 soupsieve==2.3.1
 sqlparse==0.4.2
